--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,87 @@
-/* ini css */
+.section-content {
+  background-color: #00b894;
+  color: white;
+  text-align: center;
+  padding-top: 1px;
+  padding-bottom: 1px;
+}
 
+.section {
+  text-align: center;
+  color: #00b894;
+}
+
+.formula-img {
+  text-align: center;
+}
+
+.buttonSegitiga {
+  background-color: #00b894;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+img {
+  height: 150px;
+}
+
+input {
+  margin-top: 10px;
+  margin-bottom: 5px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  width: 100%;
+}
+
+.buttonHitung {
+  justify-content: center;
+  background-color: #00b894;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  align-items: center;
+  margin: 0%;
+  transition: all 0.3s ease-in-out;
+  margin-top: 10px;
+  cursor: pointer;
+  width: 150px;
+}
+
+button:hover {
+  transform: scale(1.025);
+  letter-spacing: 0.15em;
+  box-shadow: none;
+}
+
+.judul {
+  text-align: center;
+  background-color: #00b894;
+  color: white;
+  padding-top: 3px;
+  padding-bottom: 3px;
+}
+
+.buttonReset {
+  background-color: #fdcb6e;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: flex;
+  font-size: 16px;
+  margin: 0%;
+  transition: all 0.3s ease-in-out;
+  margin-top: 10px;
+  cursor: pointer;
+}
